Fix text wrapping on game over screen

--- a/src/css/app/gameOver.css
+++ b/src/css/app/gameOver.css
@@ -33,6 +33,7 @@
     text-align: center;
     text-transform: uppercase;
     transition: letter-spacing 0.5s linear;
+    white-space: nowrap;
     width: 100%;
   }
 
